--- a/src/styles/pages/calendar-page.scss
+++ b/src/styles/pages/calendar-page.scss
@@ -1,11 +1,3 @@
-.fc {
-  z-index: -1 !important;
-}
-
-.fc-header-toolbar {
-  z-index: -1 !important;
-}
-
 .fc-toolbar-title {
   color: $color-accent !important;
 }
@@ -13,12 +5,4 @@
 .fc-button-primary {
   background-color: $color-accent !important;
   border: none !important;
-}
-
-.fc-dayGridMonth-view {
-  z-index: -1 !important;
-}
-
-.fc-daygrid-body {
-  z-index: 0 !important;
 }
