--- a/src/styles/pages/layout-page.scss
+++ b/src/styles/pages/layout-page.scss
@@ -1,4 +1,5 @@
 .layout-page {
+  position: relative;
   min-height: 100vh;
   display: flex;
 
@@ -6,6 +7,7 @@
     position: fixed;
     height: 100vh;
     display: flex;
+    z-index: 9999 !important;
   }
 
   &__main {
